# sso-switchover-agent

./: .gitignore  .pre-commit-config.yaml  .tool-versions  COMPLIANCE.yaml  Dockerfile  Dockerfile-test  Makefile  README.md  pyproject.toml  requirements.txt
.github/actions/: oc-login.yaml
.github/helpers/: namespace-setter.sh  url-setter.sh
.github/workflows/: codeql-analysis.yml  create-release.yml  deploy-staggered.yml  deploy.yml  pre-commit.yml  preemptive-failover.yml  publish-image-with-version.yml  publish-image.yml  schedule-preemptive-failove.yml  schedule-preemptive-failover.yml  set-dr-to-standby.yml  unit-test.yml  (+7 more)
docs/: developer-docs.md  environment-variables.md  switchover-logic-and-the-gslb.md
helm/: Chart.yaml  values-dev.yaml  values-e4ca1d-local.yaml  values-e4ca1d.yaml  values-eb75ad.yaml  values-prod.yaml  values.yaml
helm-cron-job/: Chart.yaml  Makefile  README.md  values-eb75ad-tools.yaml
k8s/: update_route_credentials.sh
service-account-generator/: README.md  generate_sa.sh
src/: api.py  config.py  github_app.py  logic.py  logic_test.py  main.py
ssl-renewal/: .gitignore  Readme.md  check_endpoint_health.sh  csr_details_oidc.txt  make_ssl_secret.sh  update_route_credentials.sh
transition-scripts/: .env-example  check-endpoint-health.sh  check-endpoint-test.sh  check-patroni-active.sh  deploy-by-cluster.sh  deploy-gold-active.sh  deploy-gold-in-standby.sh  deploy-gold-standby.sh  deploy-golddr-active.sh  deploy-golddr-standby.sh  deploy-switchover-agent.sh  deploy.sh  destroy.sh  enable-disable-gold-route.sh  helpers.sh  login-and-test-local-connection.sh  set-dr-to-standby.sh  set-patroni-active.sh  set-patroni-standby.sh  switch-to-gold.sh  switch-to-golddr-set-gold-standby.sh  switch-to-golddr.sh  synch-gold-to-dr-then-set-gold-active.sh  test-dns.sh  test-local-connection.sh  test-workflows-new.sh  test-workflows.sh  xlog-comparison.sh
uptime-checker/: Dockerfile  Readme.md
(+94 files in other folders)
